--- a/themes/terminal/assets/css/header.css
+++ b/themes/terminal/assets/css/header.css
@@ -18,7 +18,7 @@
 .header__logo::after {
   content: "";
   background: repeating-linear-gradient(90deg, var(--accent), var(--accent) 2px, transparent 0, transparent 10px);
-  display: block;
+  display: none;
   width: 100%;
   right: 10px;
 }
@@ -33,10 +33,12 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  background: var(--accent);
-  color: var(--background);
   font-weight: bold;
   padding: 5px 10px;
+  text-transform: uppercase;
+  font-size: clamp(2rem, 5vw + 1rem, 4rem);
+  line-height: normal;
+  letter-spacing: clamp(-0.25rem, -0.25vw, -0.1rem);
 }
 
 @media print {
