--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -443,7 +443,7 @@ blockquote.twitter-tweet::before {
   display: flex;
   flex-direction: column;
   padding: 40px;
-  max-width: 864px;
+  max-width: 1024px;
   min-height: 100vh;
   border-right: 1px solid color-mix(in srgb, var(--accent) 10%, transparent);
 }
@@ -517,4 +517,18 @@ iframe[src*="youtube.com"] {
   .content {
     display: initial;
   }
+}
+
+
+/* Image Grid */
+
+.image-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 1rem;
+}
+
+.selector-column{
+  display: flex;
+  flex-direction: column;
 }
