--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -1,10 +1,11 @@
 :root {
   --background: #1a170f;
   --foreground: #eceae5;
-  --accent: #eec35e;
+  --accent: #eceae5;
   --font-size: 1rem;
   --line-height: 1.54em;
   --radius: 0;
+  --main-width: 1200px;
 }
 
 html {
@@ -21,7 +22,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Fira Code", Monaco, Consolas, "Ubuntu Mono", monospace;
+  font-family: "Space Mono";
   font-size: var(--font-size);
   line-height: var(--line-height);
   background-color: var(--background);
@@ -54,21 +55,6 @@ h6 {
   letter-spacing: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-img,
-figure,
-video,
-table {
-  margin: 25px 0;
-}
 
 a {
   color: var(--accent);
@@ -194,9 +180,6 @@ input[type="checkbox"]:checked {
 img {
   display: block;
   max-width: 100%;
-  border: 8px solid var(--accent);
-  border-radius: var(--radius);
-  padding: 8px;
   overflow: hidden;
 }
 
@@ -442,8 +425,8 @@ blockquote.twitter-tweet::before {
 .container {
   display: flex;
   flex-direction: column;
-  padding: 40px;
-  max-width: 1024px;
+  padding: 0 40px;
+  max-width: var(--main-width);
   min-height: 100vh;
   border-right: 1px solid color-mix(in srgb, var(--accent) 10%, transparent);
 }
@@ -544,6 +527,7 @@ iframe[src*="youtube.com"] {
   justify-content: start;
   padding: 1.5rem 1rem;
   font-weight: normal;
+  width: 100%;
 }
 
 .preview-column{
@@ -569,5 +553,25 @@ iframe[src*="youtube.com"] {
 
 #preview-caption{
   text-transform: uppercase;
+}
+
+/*------------------------*/
+/* gallery
+/*------------------------*/
+
+.image-gallery {
+  display: flex; 
+  flex-flow: row wrap;
+  gap: 1rem;
+  margin-left: 0;
+}
+
+.image-gallery li {list-style: none;}
+.image-gallery li a {display: block;}
+
+.image-gallery li a img {
+  width: 100%; 
+  display: block; 
+  border: 1px solid var(--accent);
 }
 
