--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -561,13 +561,26 @@ iframe[src*="youtube.com"] {
 
 .showcase-container {
   display: grid;
-  grid-template-columns: 2.56fr 1fr;
+  grid-template-columns: 2.5fr 1fr;
   gap: 1rem;
+}
+
+@media (max-width: 684px) {
+  .showcase-container{
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+
+  .showcase-container .image {
+    min-height: 75vw;
+  }
+
 }
 
 .showcase-container .image {
   border: 1px solid var(--accent);
   padding: 10px;
+  background-position: center !important;
+  background-size: cover !important;
 }
 
 .showcase-container .text {
@@ -593,6 +606,14 @@ iframe[src*="youtube.com"] {
 /*------------------------*/
 /* gallery
 /*------------------------*/
+
+@media (max-width: 684px) {
+  .image-gallery{
+    display: flex !important;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+}
 
 .image-gallery {
   display: grid; 
@@ -639,4 +660,27 @@ iframe[src*="youtube.com"] {
 .large.square {
   grid-column-end: span 2;
   grid-row-end: span 2;
+}
+
+/*------------------------*/
+/* youtube shortcode
+/*------------------------*/
+
+.shortcode-youtube {position: relative; display: block; overflow: hidden;}
+.shortcode-youtube::before, .shortcode-youtube::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+.shortcode-youtube::before {background: url('../img/youtube_button.svg') center center / auto 4rem no-repeat;}
+.shortcode-youtube:hover::before {background-image: url('../img/youtube_button_hover.svg');}
+.shortcode-youtube::after {background: url('../img/youtube_text.svg') calc(100% - 1rem) calc(100% - 1rem) / auto 2rem no-repeat;}
+.shortcode-youtube img {display: block; margin: 0!important;}
+@media (max-width: 45rem) {
+    .shortcode-youtube::before {background-size: auto 12vw;}
+    .shortcode-youtube::after {background-position: calc(100% - 3vw) calc(100% - 3vw); background-size: auto 6vw;}
 }
