--- a/themes/terminal/assets/css/menu.css
+++ b/themes/terminal/assets/css/menu.css
@@ -38,23 +38,23 @@
 }
 
 .menu__trigger {
-  margin-right: 0 !important;
   color: var(--accent);
   user-select: none;
   cursor: pointer;
+  text-align: start;
 }
 
 .menu__dropdown {
+  width: 100%;
   display: none;
   flex-direction: column;
   position: absolute;
   background: var(--background);
-  box-shadow: 0 10px var(--background), -10px 10px var(--background), 10px 10px var(--background);
   color: var(--accent);
-  border: 2px solid var(--accent);
+  border-bottom: 2px solid var(--accent);
+  border-top: 2px solid var(--accent);
   margin: 0;
   padding: 10px;
-  top: 10px;
   left: 0;
   list-style: none;
   z-index: 99;
@@ -80,11 +80,8 @@
 
 .menu--mobile .menu__trigger {
   color: var(--accent);
-  border: 2px solid;
-  margin-left: 10px;
   height: 100%;
-  padding: 3px 8px;
-  margin-bottom: 0 !important;
+  padding: .5rem 1rem;
   position: relative;
   cursor: pointer;
   display: none;
@@ -94,9 +91,6 @@
   flex: 0 0 auto;
 }
 
-.menu--mobile li:not(:last-of-type) {
-  margin-bottom: 10px;
-}
 
 .menu--language-selector .menu__trigger {
   color: var(--accent);
@@ -146,4 +140,5 @@
   .menu--language-selector .menu__trigger {
     display: none;
   }
+
 }
