--- a/themes/terminal/assets/css/main.css
+++ b/themes/terminal/assets/css/main.css
@@ -676,9 +676,9 @@ iframe[src*="youtube.com"] {
     left: 0;
     z-index: 2;
 }
-.shortcode-youtube::before {background: url('../img/youtube_button.svg') center center / auto 4rem no-repeat;}
-.shortcode-youtube:hover::before {background-image: url('../img/youtube_button_hover.svg');}
-.shortcode-youtube::after {background: url('../img/youtube_text.svg') calc(100% - 1rem) calc(100% - 1rem) / auto 2rem no-repeat;}
+.shortcode-youtube::before {background: url('/folio/img/youtube_button.svg') center center / auto 4rem no-repeat;}
+.shortcode-youtube:hover::before {background-image: url('/folio/img/youtube_button_hover.svg');}
+.shortcode-youtube::after {background: url('/folio/img/youtube_text.svg') calc(100% - 1rem) calc(100% - 1rem) / auto 2rem no-repeat;}
 .shortcode-youtube img {display: block; margin: 0!important;}
 @media (max-width: 45rem) {
     .shortcode-youtube::before {background-size: auto 12vw;}
